added hint to Problem 5

--- a/HW4.tex
+++ b/HW4.tex
@@ -29,7 +29,7 @@ a = np.random.normal(0, 1, (n, n))
 A = a + a.T
 \end{lstlisting}
 Используя функцию \lstinline{numpy.linalg.eigvalsh}, найдите спектр матрицы $A$ и постройте гистограмму распределения собственных значений (\lstinline{plt.hist}).
-\item \textbf{(15)} Сгенерируйте случайную симметричную и положительно определенную матрицу $A$ размера $10 \times 10$. 
+\item \textbf{(15)} Сгенерируйте случайную симметричную и положительно определенную матрицу $A$ размера $10 \times 10$:
 \lstset{language=Python}
 \lstset{frame=lines}
 \lstset{label={lst:code_direct}}
@@ -65,7 +65,7 @@ $$
 \end{itemize}
 Сколько шагов $k$ требуется в каждом случае для того, чтобы получить настоящий собственный вектор $v$ с точностью $||v-v_k||_2 < 10^{-3}$?
 \item \textbf{(25)} Рассмотрите диагональную матрицу $D$ размера $n\times n$ и вектор--столбец $u$. Выберите $D$ и $u$ случайным образом (сгенерировав их элементы их стандартного нормального распределения) и найдите минимальное собственное значение и соответствующий собственный ему собственный вектор матрицы
-$$A = D + \frac{u u^T}{u^T u}.$$ Рассмотрите случаи $n=10^2$ и $n=10^5$.
+$$A = D + \frac{u u^T}{u^T u}.$$ Рассмотрите случаи $n=10^2$ и $n=10^5$ -- во втором случае Вам, возможно, пригодится \href{https://en.wikipedia.org/wiki/Bunch%E2%80%93Nielsen%E2%80%93Sorensen_formula}{Bunch--Nielsen--Sorensen formula}
 \item \textbf{(30)} Рассмотрите матрицу $A$ размера $32\times 32$, задаваемую следующей формулой:
 $$
 A_{ij} = -\delta_{i,j} + \delta_{i, j-1} + \delta_{i, j-2}.
