--- a/HW5.tex
+++ b/HW5.tex
@@ -18,7 +18,7 @@
 \title{Вычислительная физика, Осень 2020 ВШЭ. Задание 5.\footnote{Дополнительно указаны: (количество баллов за задачу)[имя задачи на nbgrader]}}
 \maketitle
 \begin{enumerate}
-\item \textbf{Восстановление зашумлённого сигнала (30)} Скачайте \href{https://www.dropbox.com/s/qgz1x67t10fd7hf/data.npz?dl=0}{файл}, содержащий матрицы $A$ и $C$ (изображение и фильтр) и откройте его, используя \lstinline{numpy}:
+\item \textbf{Восстановление зашумлённого изображения (30)} Скачайте \href{https://www.dropbox.com/s/qgz1x67t10fd7hf/data.npz?dl=0}{файл}, содержащий матрицы $A$ и $C$ (изображение и фильтр) и откройте его, используя \lstinline{numpy}:
 \lstset{language=Python}
 \lstset{frame=lines}
 \lstset{label={lst:code_direct}}
@@ -73,7 +73,7 @@ $$
 \item \textbf{Ранжирование веб--страниц (35)} Одна из самых известных задач о вычислении собственных векторов -- задача о ранжировании $n$ веб-страниц. Подход, который вам нужно будет реализовать в этой задаче, был одним из главных в работе Google на раннем этапе. Всё, что мы собираемся использовать -- структуру взаимных ссылок между страницами. \lstinline{PageRank} определяется рекурсивно: важность $i$--й страницы определяется как среднее значение важностей всех страниц, которые ссылаются на $i$--ю. Обозначим важность $i$--й страницы $p_i$, тогда это определение может быть записано в виде линейной системы:
 $$ p_i = \sum_{j} \frac{p_j}{L(j)}l_{ij}, $$
 где $l_{ij}=1$ если $j$--я страница ссылается на $i$--ю (в противном случае $l_{ij}=0$), а $L(j)$ -- количество исходящих ссылок со страницы $j$. Система может быть переписана в виде задачи на собственное значение:
-$$ p = G p, \quad G_{ij} = \frac{l_{ij}}{L(j)}.$$ Если в графе есть `подвешенные' узлы (все элементы какого-то столбца равны нулю), то весь столбец заполняется числом $1/n$. Наконец, вводится параметр $0<beta<1$ так что матрица $G$ заменяется на
+$$ p = G p, \quad G_{ij} = \frac{l_{ij}}{L(j)}.$$ Если в графе есть `подвешенные' узлы (все элементы какого-то столбца равны нулю), то весь столбец заполняется числом $1/n$. Наконец, вводится параметр $0<\beta<1$ так что матрица $G$ заменяется на
 $$
 G\to \beta G + \frac{1-\beta}{n} e e^T,
 $$
