--- a/HW6.tex
+++ b/HW6.tex
@@ -138,9 +138,9 @@ A[idx[n-1:], idx[n-1:] - n+1] = 1
 \lstset{basicstyle=\ttfamily}
 \begin{lstlisting}
 with np.printoptions(linewidth=99):
-    print(m)
+    print(A)
 
-plt.matshow(m)
+plt.matshow(A)
 \end{lstlisting}
 
 Вектор правой части задайте в виде:
