added sympy memo

--- a/HW6.tex
+++ b/HW6.tex
@@ -12,6 +12,8 @@
 \usepackage[russian]{babel}
 \usepackage{listings}
 \newcommand{\wm}[1]{\texttt{Mathematica}}
+\newcommand{\sympy}[1]{\texttt{sympy}}
+
 
 \begin{document}
 
@@ -67,7 +69,7 @@ def newton_iteration(f, fder, x0, eps=1e-5, maxiter=1000):
 $$
 x_1^2-2x_2^4+1=0,\quad x_1-x_2^3+1=0.
 $$
-Найдите явно выражение для $\Delta x_k(x_k)$ (удобно сделать это в \wm). Реализуйте итерации Ньютона и найдите действительное решение этой системы в единичном круге на плоскости $x_1,\;x_2$.
+Найдите явно выражение для $\Delta x_k(x_k)$ (удобно сделать это в \wm//\sympy). Реализуйте итерации Ньютона и найдите действительное решение этой системы в единичном круге на плоскости $x_1,\;x_2$.
 
 \item \textbf{(20)}
 Реализуйте метод итераций для решения системы линейных уравнений (метод Якоби). Для этого перепишите уравнение $Ax=b$, выделив диагональную часть матрицы $A$:
