MAINT: LSQ: reword the QR least-squares part

--- a/week_3_lsq.ipynb
+++ b/week_3_lsq.ipynb
@@ -100,9 +100,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## III. МНК с использовнием QR - разложениея.\n",
+    "## III. МНК с использовнием QR-разложениея.\n",
     "\n",
-    "Для оптимального значения $m$ из предыдущей части решите задачу МНК, используя безматричную реализацию QR - разложения. Для решения задач линейной алгебры можете использовать библиотечные функции (обратите внимание на `numpy.linalg.solve`, `numpy.linalg.qr` и т.д.) или код предыдущих недель.\n",
+    "Для оптимального значения $m$ из предыдущей части решите задачу МНК, используя QR- либо SVD-разложение design-матрицы (т.е. ваша реализация не должна строить матрицу левой части нормальной системы уравнений в явном виде). \n",
+    "Для решения задач линейной алгебры можете использовать библиотечные функции (обратите внимание на `numpy.linalg.solve_triangular`, `numpy.linalg.qr` и т.д.) или код предыдущих недель.\n",
     "Сравните результат с ответом, полученным при решении системы уравнений.\n",
     "\n",
     "(33% итоговой оценки)"
@@ -134,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
