eigh -> eig; added im.png

--- a/HW5.tex
+++ b/HW5.tex
@@ -110,7 +110,7 @@ l = dataset2csr(filename='web-Stanford.txt', nodes = 281903, edges=2312497)
 \begin{itemize}
 \item Считая, что соседние атомы на кольце соединены одинаковыми пружинами c упругой константой $k=1$, выпишите уравнения движения (уравнения Ньютона) на положения атомов $x_i$. 
 \item Предполагая, что все атомы движутся с одной и той же частотой, $x_i(t)=u_i e^{-i\omega t}$, перепишите найденные выше уравнения в виде системы линейных уравнений на вектор $u$. Составьте матрицу $A$, спектр которой определяет частоты нормальных мод.
-\item Используя \lstinline{np.linalg.eigh}, найдите спектр матрицы $A$ (возьмите $N = 1000$ и $M/m = 2$). Постройте гистограмму собственных значений. Обратите внимание, что в спектре есть щель -- `запрещенная'  область энергии внутри спектра, которая разделяет `разрешенную' область на две части.
+\item Используя \lstinline{np.linalg.eig}, найдите спектр матрицы $A$ (возьмите $N = 1000$ и $M/m = 2$). Постройте гистограмму собственных значений. Обратите внимание, что в спектре есть щель -- `запрещенная'  область энергии внутри спектра, которая разделяет `разрешенную' область на две части.
 \item Пострайте пространственную структуру численно определённой нормальной моды $u_i$ вблизи минимальной и максимально энергий спектра. 
 \item Теперь рассмотрите цепочку со случайным $k$, взятым из однородного распределения на отрезке $\left[1, 10\right]$ и $M/m = 2$. Найдите её спектр (постройте гистограмму) и изобразите пространственную структуру какой--то моды $u$ из середины спектра.
 \end{itemize}
