--- a/HW2.tex
+++ b/HW2.tex
@@ -50,7 +50,8 @@ $$
 $$
 f(A) = A^{-1}X(X^T A^{-1}X)^{-1}.
 $$
-Докажите, предполагая обратимость участвующих матриц, что $$f(X \Omega X^T + \Delta)=f(\Delta).$$
+Докажите, что $$f(X \Omega X^T + \Delta)=f(\Delta)$$
+предполагая, что все матрицы, которые обращаются в этом уравнении, действительно являются обратимыми.
 
 \item \textbf{(15)} \href{https://github.com/ev-br/CP2020/blob/master/week_1_LU_pivoting.ipynb}{Реализуйте LU разложение квадратной матрицы с выбором главного элемента}, следуя инструкциям по ссылке.
 
