--- a/HW6.tex
+++ b/HW6.tex
@@ -79,7 +79,7 @@ $$ в виде
 $$
 x_{n+1}=B x_n + c,
 $$
-где $B = D^{-1}(A-D)$. Найдите $c$.
+где $B = D^{-1}(D-A)$. Найдите $c$.
 
 Создайте случайную матрицу с диагональным доминированием:
 \lstset{language=Python}
